# matmul

./: .gitignore  CMakeLists.txt  README.md  benchmark_impl.c  plot_benchmark.py  test.c  utils.h
demos/: avx_demo.c  matmul_cache_optim.c  matmul_kernel_optim.s  matmul_kernel_unroll.c  matmul_vectorize.c  openmp_demo.c
scripts/: benchmark_curr.py  benchmark_tutorial.py
src/: kernel.c  kernel.h  matmul.c  matmul.h
